# yaifl

./: .envrc  .gitignore  .gitmodules  .hlint.yaml  404.html  CHANGELOG.md  CLEANUP_WORKFLOW.md  LICENSE  Makefile  README.md  TODO-PreconditionBuilder.txt  book.toml  cabal.project  construction.html  documentation_cleanup_workflow.json  entangled.dhall  flake.nix  graphmod.sh  hie.yaml  index.html  log.json  logtest.json  module-cleanup-workflow.json  other_miscellania.html  print.html  properties.html  rulebook stuff?  rulebooks.html  searchindex.js  searchindex.json  shell.nix  stack.yaml  test-framework.html  traceid.temp  words.db  words.sql  worldmodel.html  yaifl-actions-review.md  yaifl-core-review.md  yaifl-objects-review.md  (+2 more)
app/: Main.hs
bearmonadterminal/: bearmonadterminal.cabal
bearmonadterminal/cbits/: BearMonadTerminal.h
bearmonadterminal/omni/: Main.hs
bearmonadterminal/omni/Omni/: Speed.hs
bearmonadterminal/src/: BearMonadTerminal.hs
bearmonadterminal/src/BearLibTerminal/: Raw.hs
bearmonadterminal/src/BearMonadTerminal/: Raw.hs
cleff-optics/: cleff-optics.cabal
cleff-optics/.hie/Cleff/Optics/: Operators.hie
cleff-optics/.hie/Optics/: Cleff.hie
cleff-optics/.hie/Optics/Cleff/: Operators.hie
cleff-optics/src/Optics/: Cleff.hs
old stuff/yaifl-discord/: yaifl-discord.cabal
old stuff/yaifl-discord/app/: ExampleUtils.hs  Main.hs
yaifl/: tagging_hierarchy.md  yaifl.cabal
yaifl-actions/: AdaptiveNarrative.hs  rulebook stuff?  yaifl-actions.cabal
yaifl-actions/src/Yaifl/: ActionCollection.hs  ActionOn.hs  Matching.hs  Parser.hs  Preconditions.hs  Properties.hs  Visibility.hs  World.hs
yaifl-actions/src/Yaifl/Actions/: Answering.hs  Asking.hs  AskingFor.hs  Attacking.hs  Burning.hs  Buying.hs  Climbing.hs  Closing.hs  Consulting.hs  Cutting.hs  Drinking.hs  Dropping.hs  Eating.hs  Entering.hs  Examining.hs  Exiting.hs  GettingOff.hs  Giving.hs  Going.hs  Imports.hs  Inserting.hs  Jumping.hs  Kissing.hs  Listening.hs  Locking.hs  Looking.hs  LookingUnder.hs  Opening.hs  OutOfWorld.hs  Pulling.hs  Pushing.hs  PuttingOn.hs  Removing.hs  Rubbing.hs  SayingNo.hs  SayingSorry.hs  SayingYes.hs  Searching.hs  Setting.hs  Showing.hs  (+23 more)
yaifl-actions/src/Yaifl/Effects/: Interpreters.hs
yaifl-city/: yaifl-city.cabal
yaifl-city/src/: Building.hs  BuildingDefs.hs  Main.hs
yaifl-core/: yaifl-core.cabal
yaifl-core/src/Yaifl/: Action.hs  Activity.hs  AnyObject.hs  Entity.hs  HasProperty.hs  KindGraph.hs  Metadata.hs  ObjectLike.hs  Prelude.hs  Refreshable.hs  Rulebook.hs  Store.hs  TH.hs  Tag.hs  WorldModel.hs
yaifl-core/src/Yaifl/Actions/: Args.hs  GoesWith.hs
yaifl-core/src/Yaifl/Effects/: ActionHandler.hs  Input.hs  ObjectQuery.hs  Print.hs  RuleEffects.hs
yaifl-core/src/Yaifl/Enclosing/: Kind.hs
yaifl-core/src/Yaifl/Object/: Kind.hs  Query.hs
yaifl-core/src/Yaifl/Property/: Has.hs  Query.hs
yaifl-core/src/Yaifl/Region/: Kind.hs
yaifl-core/src/Yaifl/Room/: Kind.hs
yaifl-core/src/Yaifl/Rulebooks/: Run.hs
yaifl-core/src/Yaifl/Text/: AdaptiveNarrative.hs  Responses.hs  SayQQ.hs  SayableValue.hs  Verb.hs
yaifl-core/src/Yaifl/Thing/: Kind.hs  Thing.hs
yaifl-examples/: yaifl-examples.cabal
yaifl-examples/src/Yaifl/Chapter3/: Bic.hs  DisenchantmentBay.hs  DisenchantmentBay2.hs  DisenchantmentBay4.hs  Escape.hs  FirstNameBasis.hs  Garibaldi.hs  Laura.hs  MidsummerDay.hs  PortRoyal.hs  PortRoyal2.hs  PortRoyal3.hs  Replanting.hs  SlightlyWrong.hs  StarryVoid.hs  Tamed.hs  TheUnbuttonedElevatorAffair.hs  UpAndUp.hs  Verbosity.hs
yaifl-examples/src/Yaifl/Test/: Common.hs
yaifl-examples/test/: Spec.hs
yaifl-examples/test/Yaifl/Test/: Chapter3.hs
yaifl-examples/test/testcases/Chapter3/: Disenchantment Bay 4  First Name Basis  Laura  Replanting
yaifl-rogue/: yaifl-rogue.cabal
yaifl-rogue/app/: EffectStack.hs  FactorAnalysis.hs  Gui.hs  MessageLog.hs  Rooms.hs
yaifl-rogue/src/: DisenchantmentBay4.hs  EffectStack.hs  Gui.hs  MessageLog.hs  Rooms.hs
yaifl-rogue/src/Yaifl/Rogue/: PositionData.hs  RoomGenerator.hs
yaifl-rules/: yaifl-rules.cabal
yaifl-rules/src/Yaifl/: Locale.hs
yaifl-rules/src/Yaifl/Activities/: ChoosingNotableLocaleObjects.hs  ListingContents.hs  PrintingInventoryDetails.hs  PrintingLocaleParagraphAbout.hs  PrintingRoomDescriptionDetails.hs  PrintingTheLocaleDescription.hs
yaifl-rules/src/Yaifl/Rulebooks/: Accessibility.hs  ActionProcessing.hs  TurnSequence.hs  WhenPlayBegins.hs
yaifl-rules/src/Yaifl/Text/: DynamicText.hs  Regarding.hs  ResponseCollection.hs  Say.hs
yaifl-rules/src/Yaifl/Text/ListWriter/: AfterEntry.hs  Parameters.hs  WriteListR.hs
yaifl/src/: Parser.hs  Werewolf.hs  Yaifl.hs
yaifl/src/Yaifl/: Prelude.hs
yaifl/src/Yaifl/Core/: Action.hs  Activity.hs  Effects.hs  Entity.hs  HasProperty.hs  Metadata.hs  ObjectLike.hs  Refreshable.hs  Store.hs  TH.hs  Tag.hs  WorldModel.hs
yaifl/src/Yaifl/Core/Actions/: Args.hs  GoesWith.hs
yaifl/src/Yaifl/Core/Kinds/: AnyObject.hs  Enclosing.hs  Object.hs  Room.hs  Thing.hs
yaifl/src/Yaifl/Create/: Rule.hs
yaifl/src/Yaifl/Game/: Accessibility.hs  ActionProcessing.hs  Create.hs  EffectHandlers.hs  Move.hs  ObjectSpecifics.hs  Parser.hs  TurnSequence.hs  WhenPlayBegins.hs  World.hs
yaifl/src/Yaifl/Model/: Action.hs  Activity.hs  Effects.hs  Entity.hs  HasProperty.hs  Input.hs  Kinds.hs  Metadata.hs  MultiLocated.hs  ObjectKind.hs  ObjectLike.hs  Query.hs  Rules.hs  Store.hs  TH.hs  Tag.hs  WorldModel.hs
yaifl/src/Yaifl/Query/: Enclosing.hs  Object.hs  Property.hs  Region.hs
yaifl/src/Yaifl/Spatial/: PositionData.hs
yaifl/src/Yaifl/Std/: Create.hs  EffectHandlers.hs  Move.hs  ObjectSpecifics.hs  Parser.hs  Properties.hs  World.hs
yaifl/src/Yaifl/Text/: AdaptiveNarrative.hs  DynamicText.hs  ListWriter.hs  Print.hs  ResponseCollection.hs  Responses.hs  Say.hs  SayQQ.hs  SayableValue.hs  Verb.hs
yaifl/test/: Spec.hs
yaifl/test/Yaifl/Test/: Common.hs
yaifl/test/testcases/Chapter3/: Bic  Disenchantment Bay  Disenchantment Bay 2  Escape  Midsummer Day  Port Royal 2  Starry Void  Tamed  The Unbuttoned Elevator Affair  Up and Up
(+746 files in other folders)
