cabal-version: 3.6
name:          yaifl
version:       0.0.8.383
synopsis:      Yet another interactive fiction library.
description:   Yet another interactive fiction library.
homepage:      https://github.com/PPKFS/yaifl
bug-reports:   https://github.com/PPKFS/yaifl/issues
license:       MIT
author:        Avery
maintainer:    Avery <thecommunistduck@hotmail.co.uk>
copyright:     2022-2023 Avery
category:      Game Development
build-type:    Simple
tested-with:   GHC == 9.4.7

source-repository head
  type:     git
  location: https://github.com/PPKFS/yaifl.git

common common-options
  build-depends:
    , base
    , breadcrumbs
    , containers
    , effectful-core
    , effectful-plugin
    , named
    , solitude
    , template-haskell
    , text
    , text-display

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wno-unused-packages -Wno-deprecations -fhide-source-paths
    -Wno-unused-top-binds -Wmissing-deriving-strategies -O2
    -flate-specialise -fspecialise-aggressively
    -fprint-potential-instances -fno-warn-unused-do-bind -haddock
    -fwrite-ide-info -fplugin=Effectful.Plugin -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    InstanceSigs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Yaifl

    Yaifl.Actions.Action
    Yaifl.Actions.ActionProcessing
    Yaifl.Actions.Closing
    Yaifl.Actions.Collection
    Yaifl.Actions.Examining
    Yaifl.Actions.Going
    Yaifl.Actions.Looking
    Yaifl.Actions.Looking.Locale
    Yaifl.Actions.Looking.Visibility
    Yaifl.Actions.Opening
    Yaifl.Actions.OutOfWorld
    Yaifl.Actions.Parser

    Yaifl.Activities.Activity
    Yaifl.Activities.ChoosingNotableLocaleObjects
    Yaifl.Activities.ListingContents
    Yaifl.Activities.PrintingLocaleParagraphAbout
    Yaifl.Activities.PrintingTheLocaleDescription

    Yaifl.EffectHandlers
    Yaifl.Metadata

    Yaifl.Model.Direction
    Yaifl.Model.Object
    Yaifl.Model.Objects.Create
    Yaifl.Model.Objects.Effects
    Yaifl.Model.Objects.Entity
    Yaifl.Model.Objects.Move
    Yaifl.Model.Objects.ObjectLike
    Yaifl.Model.Objects.Query
    Yaifl.Model.Objects.RoomConnections
    Yaifl.Model.Objects.RoomData
    Yaifl.Model.Objects.Store
    Yaifl.Model.Objects.Tag
    Yaifl.Model.Objects.ThingData
    Yaifl.Model.ObjectSpecifics

    Yaifl.Model.Properties.Animal
    Yaifl.Model.Properties.Container
    Yaifl.Model.Properties.Door
    Yaifl.Model.Properties.Enclosing
    Yaifl.Model.Properties.Has
    Yaifl.Model.Properties.MultiLocated
    Yaifl.Model.Properties.Openable
    Yaifl.Model.Properties.Query
    Yaifl.Model.Properties.Supporter
    Yaifl.Model.Properties.TH

    Yaifl.Model.WorldModel

    Yaifl.Rules.Adding
    Yaifl.Rules.Args
    Yaifl.Rules.Rule
    Yaifl.Rules.Rulebook
    Yaifl.Rules.RuleEffects
    Yaifl.Rules.Run
    Yaifl.Rules.WhenPlayBegins

    Yaifl.Text.AdaptiveNarrative
    Yaifl.Text.DynamicText
    Yaifl.Text.ListWriter
    Yaifl.Text.Print
    Yaifl.Text.ResponseCollection
    Yaifl.Text.Responses
    Yaifl.Text.Say
    Yaifl.Text.SayQQ
    Yaifl.Text.Verb

    Yaifl.World

  build-depends:
    , effectful-th
    , enummapset
    , haskell-src-exts
    , haskell-src-meta
    , megaparsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , split

test-suite yaifl-test
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , aeson
    , directory
    , effectful-plugin
    , tasty
    , tasty-silver
    , yaifl

  ghc-options:
    -Wno-unused-packages -threaded -rtsopts -with-rtsopts=-N

  default-extensions:
    NoImplicitPrelude
    QuasiQuotes
    TemplateHaskell

  other-modules:
    Yaifl.Test.Chapter3.Bic
    Yaifl.Test.Chapter3.Common
    Yaifl.Test.Chapter3.PortRoyal
    Yaifl.Test.Chapter3.PortRoyal2
    Yaifl.Test.Chapter3.SlightlyWrong
    Yaifl.Test.Chapter3.StarryVoid
    Yaifl.Test.Chapter3.TheUnbuttonedElevatorAffair
    Yaifl.Test.Chapter3.UpAndUp
    Yaifl.Test.Chapter3.Verbosity
    Yaifl.Test.Common
