cabal-version: 3.6
name:          yaifl
version:       0.0.8.383
synopsis:      Yet another interactive fiction library.
description:   Yet another interactive fiction library.
homepage:      https://github.com/PPKFS/yaifl
bug-reports:   https://github.com/PPKFS/yaifl/issues
license:       MIT
author:        Avery
maintainer:    Avery <thecommunistduck@hotmail.co.uk>
copyright:     2022-2023 Avery
category:      Game Development
build-type:    Simple
tested-with:   GHC == 9.4.7

source-repository head
  type:     git
  location: https://github.com/PPKFS/yaifl.git

common common-options
  build-depends:
    base >= 4.17.2 && < 5,
    containers >= 0.6.7 && < 1.7,
    template-haskell >= 2.19.0 && < 3.20,
    effectful-core >= 2.3.0 && < 3.4,
    effectful-plugin >= 1.1.0 && < 2.2,
    effectful-th >= 1.0.0 && < 2.1,
    enummapset >= 0.7.2 && < 1.8,
    text >= 2.0.2 && < 3.1,
    haskell-src-exts >= 1.23.1 && < 2.0,
    haskell-src-meta >= 0.8.13 && < 2.0,
    megaparsec >= 9.6.1 && < 10.0,
    named >= 0.3.0 && < 1.0,
    prettyprinter >= 1.7.1 && < 3.0,
    prettyprinter-ansi-terminal >= 1.1.3 && < 2.0,
    split >= 0.2.4 && < 2.0,
    text-display >= 0.0.5 && < 1.0,
    breadcrumbs >= 1.0.0.0 && <= 10.0.0.0,
    solitude >= 0.0.0.0 && <= 10.0.0.0

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wno-unused-packages -Wno-deprecations -fhide-source-paths
    -Wno-unused-top-binds -Wmissing-deriving-strategies -O2
    -flate-specialise -fspecialise-aggressively
    -fprint-potential-instances -fno-warn-unused-do-bind -haddock
    -fwrite-ide-info -fplugin=Effectful.Plugin -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    InstanceSigs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Yaifl
    Yaifl.Game.ActionProcessing
    Yaifl.Game.Actions.Closing
    Yaifl.Game.Actions.Collection
    Yaifl.Game.Actions.Examining
    Yaifl.Game.Actions.Going
    Yaifl.Game.Actions.Looking
    Yaifl.Game.Actions.Looking.Locale
    Yaifl.Game.Actions.Looking.Visibility
    Yaifl.Game.Actions.Opening
    Yaifl.Game.Actions.OutOfWorld

    Yaifl.Game.Activities.ChoosingNotableLocaleObjects
    Yaifl.Game.Activities.ListingContents
    Yaifl.Game.Activities.PrintingLocaleParagraphAbout
    Yaifl.Game.Activities.PrintingTheLocaleDescription

    Yaifl.Game.Create.Object
    Yaifl.Game.Create.RoomConnection

    Yaifl.Game.EffectHandlers
    Yaifl.Game.Move
    Yaifl.Game.ObjectSpecifics
    Yaifl.Game.Parser
    Yaifl.Game.WhenPlayBegins
    Yaifl.Game.World
    Yaifl.Game.Create.Rule

    Yaifl.Model.Action
    Yaifl.Model.Actions.Args
    Yaifl.Model.Activity

    Yaifl.Model.Effects
    Yaifl.Model.Entity
    Yaifl.Model.HasProperty

    Yaifl.Model.Kinds.Animal
    Yaifl.Model.Kinds.AnyObject
    Yaifl.Model.Kinds.Container
    Yaifl.Model.Kinds.Direction
    Yaifl.Model.Kinds.Door
    Yaifl.Model.Kinds.Enclosing
    Yaifl.Model.Kinds.Object
    Yaifl.Model.Kinds.Openable
    Yaifl.Model.Kinds.Region
    Yaifl.Model.Kinds.Room
    Yaifl.Model.Kinds.Supporter
    Yaifl.Model.Kinds.Thing

    Yaifl.Model.Metadata
    Yaifl.Model.MultiLocated
    Yaifl.Model.ObjectLike
    Yaifl.Model.ObjectType
    Yaifl.Model.Query
    Yaifl.Model.Rules.RuleEffects
    Yaifl.Model.Rules.Rulebook
    Yaifl.Model.Rules.Run
    Yaifl.Model.Store
    Yaifl.Model.TH
    Yaifl.Model.Tag
    Yaifl.Model.WorldModel

    Yaifl.Text.AdaptiveNarrative
    Yaifl.Text.DynamicText
    Yaifl.Text.ListWriter
    Yaifl.Text.Print
    Yaifl.Text.ResponseCollection
    Yaifl.Text.Responses
    Yaifl.Text.Say
    Yaifl.Text.SayQQ
    Yaifl.Text.Verb

  build-depends:
    , effectful-th
    , enummapset
    , haskell-src-exts
    , haskell-src-meta
    , megaparsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , split

test-suite yaifl-test
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , aeson
    , directory
    , effectful-plugin
    , tasty
    , tasty-silver
    , yaifl

  ghc-options:
    -Wno-unused-packages -threaded -rtsopts -with-rtsopts=-N

  default-extensions:
    NoImplicitPrelude
    QuasiQuotes
    TemplateHaskell

  other-modules:
    Yaifl.Test.Chapter3.Bic
    Yaifl.Test.Chapter3.Common
    Yaifl.Test.Chapter3.PortRoyal
    Yaifl.Test.Chapter3.PortRoyal2
    Yaifl.Test.Chapter3.PortRoyal3
    Yaifl.Test.Chapter3.SlightlyWrong
    Yaifl.Test.Chapter3.FirstNameBasis
    Yaifl.Test.Chapter3.StarryVoid
    Yaifl.Test.Chapter3.TheUnbuttonedElevatorAffair
    Yaifl.Test.Chapter3.UpAndUp
    Yaifl.Test.Chapter3.Verbosity
    Yaifl.Test.Common
