cabal-version: 3.6
name:          yaifl-actions
version:       0.0.18.830
synopsis:      Yet another interactive fiction library.
description:
  A parser-based interactive fiction library for Haskell. The library is (roughly) in 3 parts:

    - @Yaifl.Core.*@: the foundations of the world model and objects, rules, rulebooks, activities, and actions.
    - @Yaifl.Std@: a standard library built on top of @Yaifl.Core@ with common object kinds (e.g. doors, containers, people) and implementations
      for actions and activities (e.g. looking, examining, printing the contents of something).
    - @Yaifl.Text@: utility modules for dealing with not only printing and formatting output but also a quasi-quoter for verb conjugation, interpolated
      text, name printing, and more.

  For a more in-depth birds-eye view of the library and its design, see the readme.

homepage:      https://github.com/PPKFS/yaifl
bug-reports:   https://github.com/PPKFS/yaifl/issues
license:       MIT
author:        Avery
maintainer:    Avery <ppkfs@outlook.com>
copyright:     2022-2025 Avery
category:      Game Development
build-type:    Simple
tested-with:   GHC == 9.10.1

source-repository head
  type:     git
  location: https://github.com/PPKFS/yaifl.git

common common-options
  build-depends:
    base >= 4.17.2 && < 5
    , breadcrumbs >= 1.0.0.0 && <= 10.0.0.0
    , containers >= 0.6.7 && < 1.7
    , effectful-core >= 2.3.0 && < 3.4
    , effectful-plugin >= 1.1.0 && < 2.2
    , enummapset >= 0.7.2 && < 1.8
    , text >= 2.0.2 && < 3.1
    , yaifl-core
    , yaifl-objects
    , yaifl-rules

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wno-unused-packages -Wno-deprecations -fhide-source-paths
    -Wno-unused-top-binds -Wmissing-deriving-strategies -O2
    -flate-specialise -fspecialise-aggressively
    -fprint-potential-instances -fno-warn-unused-do-bind -haddock
    -fwrite-ide-info -fplugin=Effectful.Plugin -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DeriveAnyClass
    DuplicateRecordFields
    FunctionalDependencies
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

library
  import: common-options
  hs-source-dirs:  src
  exposed-modules:

    Yaifl.World
    Yaifl.ActionCollection
    Yaifl.Effects.Interpreters
    Yaifl.Actions.Answering
    Yaifl.Actions.Asking
    Yaifl.Actions.AskingFor
    Yaifl.Actions.Attacking
    Yaifl.Actions.Burning
    Yaifl.Actions.Buying
    Yaifl.Actions.Climbing
    Yaifl.Actions.Closing
    Yaifl.Actions.Consulting
    Yaifl.Actions.Cutting
    Yaifl.Actions.Drinking
    Yaifl.Actions.Dropping
    Yaifl.Actions.Eating
    Yaifl.Actions.Entering
    Yaifl.Actions.Examining
    Yaifl.Actions.Exiting
    Yaifl.Actions.GettingOff
    Yaifl.Actions.Giving
    Yaifl.Actions.Going
    Yaifl.Actions.Imports
    Yaifl.Actions.Inserting
    Yaifl.Actions.Jumping
    Yaifl.Actions.Kissing
    Yaifl.Actions.Listening
    Yaifl.Actions.Locking
    Yaifl.Actions.Looking
    Yaifl.Actions.LookingUnder
    Yaifl.Actions.Opening
    Yaifl.Actions.Pulling
    Yaifl.Actions.Pushing
    Yaifl.Actions.PuttingOn
    Yaifl.Actions.Removing
    Yaifl.Actions.Rubbing
    Yaifl.Actions.SayingNo
    Yaifl.Actions.SayingSorry
    Yaifl.Actions.SayingYes
    Yaifl.Actions.Searching
    Yaifl.Actions.Setting
    Yaifl.Actions.Showing
    Yaifl.Actions.Sleeping
    Yaifl.Actions.Smelling
    Yaifl.Actions.Squeezing
    Yaifl.Actions.Swinging
    Yaifl.Actions.SwitchingOff
    Yaifl.Actions.SwitchingOn
    Yaifl.Actions.Taking
    Yaifl.Actions.TakingInventory
    Yaifl.Actions.TakingOff
    Yaifl.Actions.Tasting
    Yaifl.Actions.Telling
    Yaifl.Actions.Thinking
    Yaifl.Actions.Throwing
    Yaifl.Actions.Touching
    Yaifl.Actions.Turning
    Yaifl.Actions.Tying
    Yaifl.Actions.Unlocking
    Yaifl.Actions.Waiting
    Yaifl.Actions.Waking
    Yaifl.Actions.WakingUp
    Yaifl.Actions.Waving
    Yaifl.Actions.WavingHands
    Yaifl.Actions.Wearing
    Yaifl.Actions.OutOfWorld
    Yaifl.Matching
    Yaifl.Properties
    Yaifl.Visibility
    Yaifl.Preconditions
    Yaifl.Parser
    Yaifl.ActionOn
