cabal-version: 3.6
name:          yaifl-city
version:       0.0.0.1
synopsis:      Some sort of city generator for yaifl.
description:   Some sort of city generator for yaifl.
homepage:      https://github.com/PPKFS/yaifl
bug-reports:   https://github.com/PPKFS/yaifl/issues
license:       MIT
author:        Avery
maintainer:    Avery <thecommunistduck@hotmail.co.uk>
copyright:     2022-2023 Avery
category:      Game Development
build-type:    Simple
tested-with:   GHC == 9.4.7

source-repository head
  type:     git
  location: https://github.com/PPKFS/yaifl.git

common common-options
  build-depends:
    base >= 4.17.2 && < 5,
    containers >= 0.6.7 && < 1.7,
    template-haskell >= 2.19.0 && < 3.20,
    effectful-core >= 2.3.0 && < 3.4,
    effectful-plugin >= 1.1.0 && < 2.2,
    effectful-th >= 1.0.0 && < 2.1,
    enummapset >= 0.7.2 && < 1.8,
    text >= 2.0.2 && < 3.1,
    haskell-src-exts >= 1.23.1 && < 2.0,
    haskell-src-meta >= 0.8.13 && < 2.0,
    megaparsec >= 9.6.1 && < 10.0,
    named >= 0.3.0 && < 1.0,
    prettyprinter >= 1.7.1 && < 3.0,
    prettyprinter-ansi-terminal >= 1.1.3 && < 2.0,
    split >= 0.2.4 && < 2.0,
    text-display >= 0.0.5 && < 1.0,
    breadcrumbs >= 1.0.0.0 && <= 10.0.0.0,
    solitude >= 0.0.0.0 && <= 10.0.0.0

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wno-unused-packages -Wno-deprecations -fhide-source-paths
    -Wno-unused-top-binds -Wmissing-deriving-strategies -O2
    -flate-specialise -fspecialise-aggressively
    -fprint-potential-instances -fno-warn-unused-do-bind -haddock
    -fwrite-ide-info -fplugin=Effectful.Plugin -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    InstanceSigs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

executable yaifl-city
  import:          common-options
  hs-source-dirs:  src
  main-is: Main.hs
  other-modules: Building

  build-depends:
    , effectful-th
    , enummapset
    , haskell-src-exts
    , haskell-src-meta
    , megaparsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , split
    , yaifl
