cabal-version: 3.6
name:          yaifl-core
version:       0.0.18.830
synopsis:      Yet another interactive fiction library.
description:
  A parser-based interactive fiction library for Haskell.

  For a more in-depth birds-eye view of the library and its design, see the readme.

homepage:      https://github.com/PPKFS/yaifl
bug-reports:   https://github.com/PPKFS/yaifl/issues
license:       MIT
author:        Avery
maintainer:    Avery <ppkfs@outlook.com>
copyright:     2022-2025 Avery
category:      Game Development
build-type:    Simple
tested-with:   GHC == 9.10.1

source-repository head
  type:     git
  location: https://github.com/PPKFS/yaifl.git

library
  build-depends:
    base >= 4.17.2 && < 5,
    breadcrumbs >= 1.0.0.0 && <= 10.0.0.0,
    containers >= 0.6.7 && < 1.7,
    effectful-core >= 2.3.0 && < 3.4,
    effectful-plugin >= 1.1.0 && < 2.2,
    effectful-th >= 1.0.0 && < 2.1,
    enummapset >= 0.7.2 && < 1.8,
    haskell-src-exts >= 1.23.1 && < 2.0,
    haskell-src-meta >= 0.8.13 && < 2.0,
    megaparsec >= 9.6.1 && < 10.0,
    named >= 0.3.0 && < 1.0,
    optics,
    optics-core,
    prettyprinter >= 1.7.1 && < 3.0,
    prettyprinter-ansi-terminal >= 1.1.3 && < 2.0,
    random,
    relude,
    split >= 0.2.4 && < 2.0,
    template-haskell >= 2.19.0 && < 3.20,
    text >= 2.0.2 && < 3.1,
    text-display >= 0.0.5 && < 1.0,

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wno-unused-packages -Wno-deprecations -fhide-source-paths
    -Wno-unused-top-binds -Wmissing-deriving-strategies -O2
    -flate-specialise -fspecialise-aggressively
    -fprint-potential-instances -fno-warn-unused-do-bind -haddock
    -fwrite-ide-info -fplugin=Effectful.Plugin -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DeriveAnyClass
    DuplicateRecordFields
    FunctionalDependencies
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  hs-source-dirs:  src
  exposed-modules:
    Yaifl.Prelude
    Yaifl.Entity
    Yaifl.Store
    Yaifl.Tag
    Yaifl.WorldModel
    Yaifl.Object.Kind
    Yaifl.HasProperty

  build-depends:
    , effectful-th
    , enummapset
    , haskell-src-exts
    , haskell-src-meta
    , megaparsec
    , prettyprinter
    , split