cabal-version: 3.6
name:          yaifl-examples
version:       0.0.18.830
synopsis:      Yet another interactive fiction library.
description:
  A parser-based interactive fiction library for Haskell.

  For a more in-depth birds-eye view of the library and its design, see the readme.

homepage:      https://github.com/PPKFS/yaifl
bug-reports:   https://github.com/PPKFS/yaifl/issues
license:       MIT
author:        Avery
maintainer:    Avery <ppkfs@outlook.com>
copyright:     2022-2025 Avery
category:      Game Development
build-type:    Simple
tested-with:   GHC == 9.10.1

source-repository head
  type:     git
  location: https://github.com/PPKFS/yaifl.git

library
  build-depends:
    base >= 4.17.2 && < 5,
    breadcrumbs >= 1.0.0.0 && <= 10.0.0.0,
    containers >= 0.6.7 && < 1.7,
    effectful-core >= 2.3.0 && < 3.4,
    effectful-plugin >= 1.1.0 && < 2.2,
    enummapset >= 0.7.2 && < 1.8,
    yaifl-core,
    template-haskell,
    yaifl-rules
    , yaifl-actions
    , yaifl
    , yaifl-objects
    , text >= 2.0.2 && < 3.1

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wno-unused-packages -Wno-deprecations -fhide-source-paths
    -Wno-unused-top-binds -Wmissing-deriving-strategies -O2
    -flate-specialise -fspecialise-aggressively
    -fprint-potential-instances -fno-warn-unused-do-bind -haddock
    -fwrite-ide-info -fplugin=Effectful.Plugin -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DeriveAnyClass
    DuplicateRecordFields
    FunctionalDependencies
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    TypeApplications
    UndecidableInstances
    ViewPatterns

  hs-source-dirs:  src
  exposed-modules:
    Yaifl.Chapter3.Bic
    Yaifl.Chapter3.DisenchantmentBay
    Yaifl.Chapter3.DisenchantmentBay2
    Yaifl.Chapter3.DisenchantmentBay4
    Yaifl.Chapter3.FirstNameBasis
    Yaifl.Chapter3.Garibaldi
    Yaifl.Chapter3.Laura
    Yaifl.Chapter3.Escape
    Yaifl.Chapter3.MidsummerDay
    Yaifl.Chapter3.Replanting
    Yaifl.Chapter3.PortRoyal
    Yaifl.Chapter3.PortRoyal2
    Yaifl.Chapter3.PortRoyal3
    Yaifl.Chapter3.SlightlyWrong
    Yaifl.Chapter3.StarryVoid
    Yaifl.Chapter3.Tamed
    Yaifl.Chapter3.TheUnbuttonedElevatorAffair
    Yaifl.Chapter3.UpAndUp
    Yaifl.Chapter3.Verbosity
    Yaifl.Test.Common

test-suite yaifl-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , aeson
    , directory
    , effectful-plugin
    , tasty
    , tasty-silver
    , yaifl
    , yaifl-examples
    , yaifl-core
    , yaifl-rules
    , containers
    , random
    , breadcrumbs

  ghc-options:
    -Wno-unused-packages -threaded -rtsopts -with-rtsopts=-N
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DeriveAnyClass
    DuplicateRecordFields
    FunctionalDependencies
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    TypeApplications
    UndecidableInstances
    ViewPatterns

  other-modules:
    Yaifl.Test.Chapter3

