cabal-version: 3.6
name:          yaifl-rogue
version:       0.0.0.1
synopsis:      Some sort of roguelike frontend for yaifl.
description:   Some sort of roguelike frontend for yaifl.
homepage:      https://github.com/PPKFS/yaifl
bug-reports:   https://github.com/PPKFS/yaifl/issues
license:       MIT
author:        Avery
maintainer:    Avery <ppkfs@outlook.com>
copyright:     2024 Avery
category:      Game Development
build-type:    Simple
tested-with:   GHC == 9.10

source-repository head
  type:     git
  location: https://github.com/PPKFS/yaifl.git

common common-options
  build-depends:
    base >= 4.17.2 && < 5,
    containers >= 0.6.7 && < 1.7,
    template-haskell >= 2.19.0 && < 3.20,
    effectful-core >= 2.3.0 && < 3.4,
    effectful-plugin >= 1.1.0 && < 2.2,
    effectful-th >= 1.0.0 && < 2.1,
    enummapset >= 0.7.2 && < 1.8,
    text >= 2.0.2 && < 3.1,
    haskell-src-exts >= 1.23.1 && < 2.0,
    haskell-src-meta >= 0.8.13 && < 2.0,
    megaparsec >= 9.6.1 && < 10.0,
    named >= 0.3.0 && < 1.0,
    prettyprinter >= 1.7.1 && < 3.0,
    split >= 0.2.4 && < 2.0,
    text-display >= 0.0.5 && < 1.0,
    breadcrumbs >= 1.0.0.0 && <= 10.0.0.0,
    random,
    vector,
    roguefunctor,
    yaifl

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wno-unused-packages -Wno-deprecations -fhide-source-paths
    -Wno-unused-top-binds -Wmissing-deriving-strategies -O2
    -flate-specialise -fspecialise-aggressively
    -fprint-potential-instances -fno-warn-unused-do-bind -haddock
    -fwrite-ide-info -fplugin=Effectful.Plugin -Wunused-packages -threaded

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    InstanceSigs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

library
  import: common-options
  hs-source-dirs:  src
  exposed-modules:
    Yaifl.Rogue.PositionData
    Yaifl.Rogue.RoomGenerator
executable yaifl-rogue-app
  import: common-options
  hs-source-dirs:  app
  main-is: Main.hs
  other-modules:
    MessageLog
    Gui
    EffectStack
    Rooms

  build-depends:
    , prettyprinter
    , split
    , yaifl
    , yaifl-rogue
    , roguefunctor
    , bearlibterminal
    , vector
